--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
          "manager",
          "AstrakoBot"
       ],   
-   "repository": "https://github.com/Astrako/AstrakoBot",
+   "repository": "https://github.com/Genji99/AstrakoBot",
    "addons": [
       {
          "options": {
